fix: z-index

--- a/src/pages/BenefitsBar/BenefitsBar.module.scss
+++ b/src/pages/BenefitsBar/BenefitsBar.module.scss
@@ -44,6 +44,7 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+  z-index: 10;
 }
 
 .filter_block {
