--- a/src/widgets/BarHeader/styles/BarHeader.module.scss
+++ b/src/widgets/BarHeader/styles/BarHeader.module.scss
@@ -23,6 +23,7 @@
   background-color: white;
   height: 120px;
   align-items: center;
+  z-index: 10;
 
   .content {
     display: flex;
